Updates based on changelog

--- a/app/views/layinghens/current/eligibility/biosecurity/vaccination-lobby.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/vaccination-lobby.html
@@ -46,17 +46,6 @@
                             attributes: {
                                     'data-next': 'elim-vaccination-lobby'
                                 }
-                        },
-                        {
-                            divider: 'or'
-                        },
-                        {
-                            text: 'No, I am rearing organic pullets',
-                            value: 'No, I am rearing organic pullets',
-                            checked: true if data['vaccination-lobby'] == 'No, I am rearing organic pullets',
-                            attributes: {
-                                    'data-next': 'changing-area'
-                                }
                         }
                     ]
                 }) }}
@@ -76,10 +65,10 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    The building must have a dedicated area to perform pullet vaccinations, with access to the loading bay. 
+                    The building must have a dedicated area to perform pullet vaccinations, with access to the loading bay.
                 </p>
                 <p>
-                    If you are rearing organic pullets, you are exempt from adding a vaccination lobby.
+                    If you do not vaccinate your pullets currently, you must add a vaccination lobby to allow for future vaccination requirements.
                 </p>
             </div>
 
