--- a/app/views/layinghens/current/eligibility/solar/exemptions.html
+++ b/app/views/layinghens/current/eligibility/solar/exemptions.html
@@ -96,7 +96,7 @@
 
             <div class="app-step-nav-related app-step-nav-related--singular">
                 <h2 class="app-step-nav-related__heading">
-                <span class="app-step-nav-related__pretitle">Funding priorities</span>
+                <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
                     The roof of this building must be able to support solar PV panels, allowing for potential use in the future, unless any of these statements apply.
