--- a/app/views/layinghens/current/scoring/structure.html
+++ b/app/views/layinghens/current/scoring/structure.html
@@ -37,9 +37,9 @@
                     },
                     items: [
                         {
-                            text: 'Shower-in-facilities in the lobby or changing room area',
-                            value: 'Shower-in-facilities',
-                            checked: true if 'Shower-in-facilities' | isIn(data['scoring-structure'])
+                            text: 'Shower facilities in the biosecurity changing area',
+                            value: 'Shower facilities',
+                            checked: true if 'Shower facilities' | isIn(data['scoring-structure'])
                         },
                         {
                             text: 'An integrated externally accessible storage room with a separate air space',
