--- a/app/views/layinghens/current/eligibility/veranda/project-cost-total.html
+++ b/app/views/layinghens/current/eligibility/veranda/project-cost-total.html
@@ -25,6 +25,20 @@
                     You can only apply for a grant of up to 40% of the estimated costs. The minimum grant you can apply for this project is £5,000 (40% of £12,500). The maximum grant is £100,000.
                 </p>
 
+                {% set detailsContentHTML %}
+                    <p>
+                        Enter the costs of adding this veranda only.
+                    </p>
+                    <p>
+                        You must submit a separate application for each veranda.
+                    </p>
+                {% endset %}
+                
+                {{ govukDetails({
+                    summaryText: 'I am adding verandas to multiple buildings',
+                    html: detailsContentHTML
+                }) }}
+
                 {% set hintHtml %}
 
                     <p class="govuk-hint">
