--- a/app/views/layinghens/current/views/layouts/layout.html
+++ b/app/views/layinghens/current/views/layouts/layout.html
@@ -12,6 +12,14 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
     {% set poultryTypeInverse = 'pullet' if data['poultry-type'] == 'hen' else 'hen' %}
 {% endif %}
 
+{% set projectType = 'replace' %}
+{% set projectTypeInverse = 'refurb' %}
+{% if data['project-type'] %}
+    {% set projectType = data['project-type'] %}
+    {% set projectTypeInverse = 'refurb' if data['project-type'] == 'replace' else 'replace' %}
+{% endif %}
+
+
 {% block beforeContent %}
 
     <div class="govuk-grid-row">
@@ -51,8 +59,12 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
                     href: "/manage-prototype"
                 },
                 {
-                    text: "Switch type to " + poultryTypeInverse + "s",
+                    text: "Switch poultry type to " + poultryTypeInverse + "s",
                     href: "#pageUrl#?poultry-type=" + poultryTypeInverse
+                },
+                {
+                    text: "Switch project type to " + projectTypeInverse,
+                    href: "#pageUrl#?project-type=" + projectTypeInverse
                 }
             ]
         }
