content updates based on changelog

--- a/app/views/layinghens/current/eligibility/biosecurity/external-taps.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/external-taps.html
@@ -35,7 +35,7 @@
                             value: 'Yes',
                             checked: true if data['external-taps'] == 'Yes',
                             attributes: {
-                                'data-next': '../solar/solar-pv-system'
+                                'data-next': 'vehicle-washing-area'
                             }
                         },
                         {
