--- a/app/views/layinghens/current/eligibility/biosecurity/vehicle-washing-area.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/vehicle-washing-area.html
@@ -54,7 +54,7 @@
                     value: 'Yes',
                     checked: true if data['vehicle-washing-area'] == 'Yes',
                     attributes: {
-                                'data-next': 'external-taps'
+                                'data-next': '../solar/solar-pv-system'
                             }
                 },
                  {
