--- a/app/views/layinghens/current/eligibility/biosecurity/vehicle-washing-area.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/vehicle-washing-area.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the building have a designated area for washing and disinfecting vehicles?
+    Will there be a designated area for washing and disinfecting vehicles?
 {% endblock %}
 
 {% block content %}
@@ -20,12 +20,12 @@
             {% set hintHtml %}
 
                 <p class="govuk-hint">
-                    This must include:
+                    This must be an area on site that includes:
                 </p>
 
                 <ul class="govuk-list govuk-list--bullet govuk-hint">
                     <li>   
-                        an area of concrete parking which is appropriate to the size of the vehicles entering the facility (minimum width of 3 metres)
+                        a concrete surface that is appropriate to the size of the vehicles entering the facility (minimum width of 3 metres)
                     </li>
                     <li>
                         a drainage system and storage tanks for soiled water
@@ -40,7 +40,7 @@
                 classes: 'govuk-radios--inline',
                 fieldset: {
                     legend: {
-                        text: 'Will the building have a designated area for washing and disinfecting vehicles?',
+                        text: 'Will there be a designated area for washing and disinfecting vehicles?',
                         isPageHeading: true,
                         classes: 'govuk-fieldset__legend--l'
                     }
