updates to start page

--- a/app/views/layinghens/current/start-page.html
+++ b/app/views/layinghens/current/start-page.html
@@ -58,9 +58,9 @@
 
        <ul class="govuk-list govuk-list--bullet">
         <li>
-          refurbishing or replacing existing laying hen or pullet housing
+          refurbishing or replacing existing laying hen or pullet buildings to meet the grant funding requirements
         <li>
-          adding a veranda to existing laying hen or pullet housing
+          adding a veranda only to existing laying hen or pullet buildings
         </li>
       </ul>
 
