--- a/app/views/layinghens/current/eligibility/biosecurity/changing-area.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/changing-area.html
@@ -94,7 +94,7 @@
                 </p>
 
                 <p>
-                    If you're refurbishing an existing building and have limited internal space, you can add a shed onto the main entrance as a biosecure changing area.
+                    If you’re refurbishing an existing building and have limited internal space, you can add a shed onto the main entrance as a biosecure changing area.
                 </p>
             </div>
 
