--- a/app/views/layinghens/current/eligibility/biosecurity/vaccination-lobby.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/vaccination-lobby.html
@@ -20,6 +20,7 @@
                 {{ govukRadios ({
                     idPrefix: 'vaccination-lobby',
                     name: 'vaccination-lobby',
+                    classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
                             text: 'Will there be a designated vaccination lobby with internal and external access?',
