--- a/app/views/layinghens/current/eligibility/common/elim-one-thousand-birds.html
+++ b/app/views/layinghens/current/eligibility/common/elim-one-thousand-birds.html
@@ -24,14 +24,16 @@
 
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
+                <p>
+                    You must:
+                </p>
                 <ul class="govuk-list govuk-list--bullet">
-                        <li>
-                            You must be the registered keeper of at least 1000 {{ poultryDescriptor }}.
-                        </li>
-                        <li>
-                            have housed at least 1,000 {{ poultryDescriptor }} on your farm in the last 6 months.
-                        </li>
-    
+                    <li>
+                        be the registered keeper of at least 1,000 {{ poultryDescriptor }}
+                    </li>
+                    <li>
+                        have housed at least 1,000 {{ poultryDescriptor }} on your farm in the last 6 months
+                    </li>
                 </ul>
 
                 <p>
