--- a/app/views/layinghens/current/eligibility/common/one-thousand-birds.html
+++ b/app/views/layinghens/current/eligibility/common/one-thousand-birds.html
@@ -81,11 +81,16 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    Be the registered keeper of at least 1,000 {{ poultryDescriptor }}.
+                    You must:
                 </p>
-                <p>
-                    Have housed at least 1,000 {{ poultryDescriptor }} on your farm in the last 6 months.
-                </p>
+                <ul class="govuk-list govuk-list--bullet">
+                    <li>
+                        be the registered keeper of at least 1,000 {{ poultryDescriptor }}
+                    </li>
+                    <li>
+                        have housed at least 1,000 {{ poultryDescriptor }} on your farm in the last 6 months
+                    </li>
+                </ul>
             </div>
         </div>
 
