--- a/app/views/layinghens/current/scoring/data.html
+++ b/app/views/layinghens/current/scoring/data.html
@@ -78,8 +78,8 @@
                             checked: true if 'Feed data or conversion ratios' | isIn(data['scoring-data'])
                         },
                         {
-                            text: 'Locomotion or movement data',
-                            value: 'Locomotion or movement data',
+                            text: 'Locomotion or movement',
+                            value: 'Locomotion or movement',
                             checked: true if 'Locomotion or movement data' | isIn(data['scoring-data'])
                         },
                 
