thousands seperator update

--- a/app/views/layinghens/current/templates/start-with-step-by-step.html
+++ b/app/views/layinghens/current/templates/start-with-step-by-step.html
@@ -65,7 +65,7 @@
               </span>
 
               <span class="js-step-title">
-                Check you're allowed to drive
+                Check you’re allowed to drive
               </span>
             </h3>
           </div>
