--- a/app/views/layinghens/current/start-page.html
+++ b/app/views/layinghens/current/start-page.html
@@ -53,14 +53,14 @@
       </h2>
 
       <p>
-        You can apply for up to 40% of the estimated project costs of either: 
+        You can apply for up to 40% of the estimated project costs of either:
       </p>
 
        <ul class="govuk-list govuk-list--bullet">
         <li>
-          refurbishing or replacing existing laying hen or pullet buildings to meet the grant funding requirements
-        <li>
           adding a veranda only to existing laying hen or pullet buildings
+        <li>
+           a comprehensive project, where you are refurbishing or replacing existing laying hen or pullet buildings to meet the grant funding requirements
         </li>
       </ul>
 
@@ -78,19 +78,19 @@
       </ul>
 
       <p>
-        If you are applying for building project grant funding, you can apply for up to 25% of the estimated costs of buying and installing a solar PV system which produces up to 5 kilowatts (kW) of power capacity per 1,000 birds. 
+        If you are applying for a comprehensive project, you can apply for up to 25% of the estimated costs of buying and installing a solar PV system which produces up to 5 kilowatts (kW) of power capacity per 1,000 birds.  
       </p>
 
       <p>
-        You can apply for grant funding for multiple projects. You must submit an application for each project. You cannot apply for grant funding for both building and veranda-only projects. 
+        You can apply for grant funding for multiple buildings. You must submit an application for each building. You cannot apply for grant funding for both comprehensive and veranda-only projects.
       </p>
       
       <p>
-        The maximum total grant amount each business can apply for is £500,000 for building projects (including solar PV system costs) or £100,000 for veranda-only projects. The Rural Payments Agency (RPA) will award the veranda-only grant funding on a first come, first served basis.
+        The maximum total grant amount each business can apply for is £500,000 for comprehensive projects (including solar PV system costs) or £100,000 for veranda-only projects. The Rural Payments Agency (RPA) will award the veranda-only grant funding on a first come, first served basis.
       </p>
 
       <p>
-        For building projects, the minimum grant is £15,000 (40% of £37,500). For veranda-only projects, the minimum grant is £5,000 (40% of £12,500).
+        For comprehensive projects, the minimum grant is £15,000 (40% of £37,500). For veranda-only projects, the minimum grant is £5,000 (40% of £12,500).
       </p>
 
       {{ govukInsetText ({
