updates to content to reflect changelog

--- a/app/views/layinghens/current/eligibility/common/project-type.html
+++ b/app/views/layinghens/current/eligibility/common/project-type.html
@@ -40,7 +40,7 @@
                     },
                     items: [
                         {
-                            text: 'Adding a veranda only to an existing building',
+                            text: 'Adding a veranda only to the existing building',
                             value: 'veranda',
                             checked: true if data['project-type'] == 'veranda',
                             hint: {
@@ -51,7 +51,7 @@
                             }
                         },
                         {
-                            text: 'Refurbishing an existing building',
+                            text: 'Refurbishing the existing building',
                             value: 'refurb',
                             checked: true if data['project-type'] == 'refurb',
                             hint: {
