--- a/app/views/layinghens/current/start-page.html
+++ b/app/views/layinghens/current/start-page.html
@@ -78,7 +78,7 @@
       </ul>
 
       <p>
-        If you are applying for a comprehensive project, you can apply for up to 25% of the estimated costs of buying and installing a solar PV system which produces up to 5 kilowatts (kW) of power capacity per 1,000 birds.  
+        As part of a comprehensive project, you can apply for up to 25% of the estimated costs of buying and installing a solar PV system which produces up to 5 kilowatts (kW) of power capacity per 1,000 birds.  
       </p>
 
       <p>
@@ -86,11 +86,15 @@
       </p>
       
       <p>
-        The maximum total grant amount each business can apply for is £500,000 for comprehensive projects (including solar PV system costs) or £100,000 for veranda-only projects. The Rural Payments Agency (RPA) will award the veranda-only grant funding on a first come, first served basis.
+        The maximum total grant amount each business can apply for is £500,000 for comprehensive projects or £100,000 for veranda-only projects.
       </p>
 
       <p>
-        For comprehensive projects, the minimum grant is £15,000 (40% of £37,500). For veranda-only projects, the minimum grant is £5,000 (40% of £12,500).
+        The minimum grant is £15,000 (40% of £37,500) for comprehensive projects or £5,000 (40% of £12,500) for veranda-only projects.
+      </p>
+
+      <p>
+        The Rural Payments Agency (RPA) will award the veranda-only grant funding on a first come, first served basis.
       </p>
 
       {{ govukInsetText ({
